在code/pool文件夹：实现线程池和单例连接池+RAII

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
         "thread": "cpp",
         "mutex": "cpp",
         "semaphore": "cpp",
-        "stop_token": "cpp"
+        "stop_token": "cpp",
+        "cassert": "cpp"
     }
 }
