在code/http文件夹：实现HTTP的请求/响应/类连接

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,10 @@
         "mutex": "cpp",
         "semaphore": "cpp",
         "stop_token": "cpp",
-        "cassert": "cpp"
+        "cassert": "cpp",
+        "bitset": "cpp",
+        "unordered_set": "cpp",
+        "regex": "cpp",
+        "sstream": "cpp"
     }
 }
